# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  before.yml  pyproject.toml
gen_diff/scripts/: gendiff.py  parsers.py
tests/: test_gendiff.py
tests/fixtures/: expectation_step4.json
